# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: tehtava1.md
src/: index.py
src/entities/: user.py
src/repositories/: user_repository.py
src/tests/: user_test.py
src/ui/: ui.py
